<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/agent_detail_menu_start"
        android:title="@string/agent_detail_start"
        android:icon="@drawable/ic_play"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/agent_detail_menu_stop"
        android:title="@string/agent_detail_stop"
        android:icon="@drawable/ic_stop"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/agent_detail_menu_pause"
        android:title="@string/agent_detail_pause"
        android:icon="@drawable/ic_pause"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/agent_detail_menu_edit"
        android:title="@string/agent_detail_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/agent_detail_menu_delete"
        android:title="@string/agent_detail_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/agent_detail_menu_share"
        android:title="Share"
        android:icon="@drawable/ic_share"
        app:showAsAction="never" />

</menu>
